list concat optimizations